--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "\"echo\\\"Error: no test specified\\\"&& exit 1\""
+    "test": "\"echo\\\"Error: no test specified\\\"&& exit 1\"",
+    "start": "webpack serve --open",
+    "build": "webpack --mode production",
+    "watch": "webpack --watch"
+    
   },
   "repository": {
     "type": "git",
@@ -13,7 +17,15 @@
   "author": "",
   "license": "ISC",
   "keywords": [],
+  "devDependencies": {
+    "html-webpack-plugin": "^5.6.0",
+    "webpack": "^5.92.1",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
+  },
   "dependencies": {
-    "webpack": "^5.92.1"
+    "bootstrap": "^5.3.3",
+    "css-loader": "^7.1.2",
+    "style-loader": "^4.0.0"
   }
 }
